<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:id="@+id/post">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/post_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />

        <TextView
            android:id="@+id/post_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />

        <TextView
            android:id="@+id/post_pet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />

        <TextView
            android:id="@+id/post_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/pet_image"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:background="#5E2FFF00"
            android:contentDescription="@string/pet_image"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location_title"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginTop="7sp"
                android:text="@string/location_title"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location_content"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:text="@string/location_dummy"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginTop="7sp"
                android:text="@string/description_title"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description_content"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="5sp"
                android:layout_marginBottom="5sp"
                android:text="@string/description_dummy"
                android:textSize="14sp"
                android:textStyle="italic" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>