<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signup_fragment"
    tools:context=".ui.signup.SignupFragment">

    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/et_password"
        android:background="@drawable/et_custom"
        android:fontFamily="sans-serif"
        android:hint="@string/full_name"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp"
        android:textColorHighlight="@color/purple_500"
        android:textColorLink="@color/purple_500"
        android:textCursorDrawable="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <EditText
        android:id="@+id/e_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/et_password"
        android:background="@drawable/et_custom"
        android:fontFamily="sans-serif"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp"
        android:textColorHighlight="@color/purple_500"
        android:textColorLink="@color/purple_500"
        android:textCursorDrawable="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.249" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="415dp"
        android:layout_height="53dp"
        android:layout_centerInParent="true"
        android:background="@drawable/et_custom"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp"
        android:textColorHighlight="@color/purple_500"
        android:textColorLink="@color/purple_500"
        android:textCursorDrawable="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:layout_below="@id/et_password"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:layout_below="@id/et_password"
        android:background="@drawable/btn_custom"
        android:fontFamily="sans-serif"
        android:text="@string/signup"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="401dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:textColorHighlight="@color/purple_500"
        android:textColorLink="@color/purple_500"
        android:textCursorDrawable="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/signuptxt"
        android:layout_width="129dp"
        android:layout_height="33dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

</androidx.constraintlayout.widget.ConstraintLayout>