<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addpost.AddPostFragment">

    <TextView
        android:id="@+id/add_post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_post_title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radio_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095">

        <TextView
            android:id="@+id/category_title"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/category_title"
            android:textAlignment="textEnd"
            android:textColor="#494949"
            android:textCursorDrawable="@color/ic_add_button_background"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_lost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/lost"
            android:textAlignment="center"
            android:textColor="#494949"
            android:textColorHighlight="@color/purple_200"
            android:textColorLink="@color/purple_500"
            android:textCursorDrawable="@color/purple_700"
            android:textSize="12sp"
            android:checked="true"
            android:buttonTint="@color/purple_500"
            tools:ignore="UnusedAttribute" />

        <RadioButton
            android:id="@+id/radio_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/found"
            android:textAlignment="center"
            android:textColor="#494949"
            android:textColorHighlight="@color/purple_200"
            android:textColorLink="@color/purple_500"
            android:textCursorDrawable="@color/purple_700"
            android:textSize="12sp"
            android:buttonTint="@color/purple_500"
            tools:ignore="UnusedAttribute" />

        <RadioButton
            android:id="@+id/radio_adopt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="30dp"
            android:text="@string/adopt"
            android:textAlignment="center"
            android:textColor="#494949"
            android:textColorHighlight="@color/purple_200"
            android:textColorLink="@color/purple_500"
            android:textCursorDrawable="@color/purple_700"
            android:textSize="12sp"
            android:buttonTint="@color/purple_500"
            tools:ignore="UnusedAttribute" />

    </RadioGroup>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="#EAEAEA"
        android:contentDescription="@string/camera_description"
        android:src="@mipmap/ic_camera_button_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />

    <Spinner
        android:id="@+id/spinner_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#EAEAEA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinners"
        app:layout_constraintVertical_bias="0.007" />

    <LinearLayout
        android:id="@+id/spinners"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473">

        <Spinner
            android:id="@+id/spinner_pet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#EAEAEA" />

        <Spinner
            android:id="@+id/spinner_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#EAEAEA" />

        <Spinner
            android:id="@+id/spinner_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#EAEAEA" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#858585"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="401dp"
            android:layout_height="101dp"
            android:layout_margin="5dp"
            android:hint="@string/description_hint"
            android:textColorHighlight="@color/purple_500"
            android:textColorLink="@color/purple_500"
            android:textCursorDrawable="@color/purple_700"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_location"
            app:layout_constraintVertical_bias="0.034"
            android:inputType="textFilter"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/finish_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853">

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/confirm_button"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:text="@string/cancel_button"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>